@@ -49,6 +49,8 @@ Release 0.2.1 - Unreleased
                (Jean-Daniel Cryans via Stack)
    HBASE-855   compaction can return less versions then we should in some cases
                (Billy Pearson via Stack)
+   HBASE-832   Problem with row keys beginnig with characters < than ',' and
+               the region location cache
 
   IMPROVEMENTS
    HBASE-801  When a table haven't disable, shell could response in a "user
